fdo#77039: Fill the match string even if the raw string is empty.

And in case of an empty string, call svl::SharedString::getEmptyString()
to get an empty shared string instance.

Change-Id: I0923e59f03468790270de8ef22323c0cedad002f